--- a/index.html
+++ b/index.html
@@ -7,10 +7,14 @@
         <link rel="stylesheet" href="./styles.css" />
     </head>
     <body>
+        <main>
+            <button id="open-modal" class="btn">Open Modal</button>
+        </main>
+
         <!-- Modal -->
-        <div class="modal-backdrop">
+        <div id="modal" class="modal-backdrop">
             <div class="modal-container">
-                <button class="modal-close">&times;</button>
+                <button id="modal-close" class="modal-close">&times;</button>
                 <div class="modal-content">
                     <p>
                         Lorem ipsum dolor sit, amet consectetur adipisicing
@@ -25,5 +29,7 @@
                 </div>
             </div>
         </div>
+
+        <script src="./main.js"></script>
     </body>
 </html>
