Xử lý để nhiều Modal cùng hoạt động

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <main>
-            <button id="open-modal" class="btn">Open Modal</button>
+            <button class="btn" data-modal="#modal">Open Modal</button>
         </main>
 
         <!-- Modal -->
