Thiết kế Modal contructor

--- a/index.html
+++ b/index.html
@@ -8,27 +8,8 @@
     </head>
     <body>
         <main>
-            <button class="btn" data-modal="#modal">Open Modal</button>
+            <button id="open-modal" class="btn">Open Modal</button>
         </main>
-
-        <!-- Modal -->
-        <div id="modal" class="modal-backdrop">
-            <div class="modal-container">
-                <button id="modal-close" class="modal-close">&times;</button>
-                <div class="modal-content">
-                    <p>
-                        Lorem ipsum dolor sit, amet consectetur adipisicing
-                        elit. Magni quia, cum aspernatur veritatis ratione
-                        eligendi iure aliquid consequatur totam necessitatibus
-                        in ea officiis animi qui blanditiis nobis suscipit
-                        natus? Tenetur ducimus fugiat cum reprehenderit odit
-                        reiciendis, facilis suscipit pariatur quos error
-                        necessitatibus culpa fuga? Iure suscipit autem nostrum
-                        unde. Porro?
-                    </p>
-                </div>
-            </div>
-        </div>
 
         <script src="./main.js"></script>
     </body>
