Lấy nội dung Modal từ template

--- a/index.html
+++ b/index.html
@@ -10,6 +10,27 @@
         <main>
             <button id="open-modal" class="btn">Open Modal</button>
         </main>
+        <template id="modal">
+            <h1>Lorem ipsum dolor sit amet.</h1>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Deleniti voluptatum nam error reiciendis? Nihil, inventore!
+            </p>
+            <p>
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                Aliquam cupiditate molestiae enim corrupti ipsa iste sequi quia
+                consequatur magnam perferendis!
+            </p>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus,
+                ratione.
+            </p>
+            <p>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Porro
+                fugit quia tempore rerum voluptate. Quasi, corrupti
+                voluptatibus? Laboriosam, quia. Non, sit unde!
+            </p>
+        </template>
 
         <script src="./main.js"></script>
     </body>
