--- a/index.html
+++ b/index.html
@@ -4,34 +4,168 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Modal</title>
-        <link rel="stylesheet" href="./styles.css" />
+        <link rel="stylesheet" href="styles.css" />
     </head>
     <body>
+        <header>
+            <button id="open-modal-1" class="btn">Open Modal 1</button>
+            <button id="open-modal-2" class="btn">Open Modal 2</button>
+        </header>
         <main>
-            <button id="open-modal" class="btn">Open Modal</button>
+            <article>
+                <h1>Lorem ipsum dolor sit amet.</h1>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Labore rerum alias et doloribus, ipsa optio aut, molestias
+                    itaque necessitatibus excepturi minus blanditiis dolor at
+                    esse ad iste modi cumque sed voluptatum beatae amet
+                    distinctio deleniti repellendus nostrum? Earum, vitae ipsum!
+                </p>
+                <h2>Lorem ipsum dolor sit amet.</h2>
+                <p>
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                    Inventore amet doloremque debitis deleniti accusamus
+                    quisquam commodi distinctio aliquid veritatis quae quam modi
+                    repellat corporis facere quia, quidem ratione fugit
+                    incidunt.
+                </p>
+                <p>
+                    <img
+                        src="https://images.unsplash.com/photo-1730577836014-0689bfc83670?q=80&w=2525&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                        alt=""
+                    />
+                </p>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                    Inventore, fugiat. Ut quam culpa dolore harum. Mollitia,
+                    praesentium rerum! Eligendi, necessitatibus!
+                </p>
+                <h2>Lorem, ipsum dolor.</h2>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Rerum, qui!
+                </p>
+                <h3>Lorem ipsum dolor sit amet.</h3>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Temporibus deleniti nam necessitatibus omnis neque?
+                    Doloribus illo praesentium qui non? Pariatur quisquam esse
+                    iste unde optio molestiae assumenda placeat cupiditate
+                    voluptate!
+                </p>
+                <p>
+                    <img
+                        src="https://images.unsplash.com/photo-1691509479094-f84a9860171b?q=80&w=2670&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                        alt=""
+                    />
+                </p>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Dolorum quo minus facere.
+                </p>
+                <h3>Lorem ipsum dolor sit.</h3>
+                <p>
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                    Impedit vel vero itaque tempore praesentium, delectus
+                    incidunt maxime placeat illum consequuntur minima labore!
+                    Quae atque reprehenderit ratione quis cupiditate quas fugit!
+                </p>
+                <h2>Lorem ipsum dolor sit amet.</h2>
+                <p>
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                    Inventore amet doloremque debitis deleniti accusamus
+                    quisquam commodi distinctio aliquid veritatis quae quam modi
+                    repellat corporis facere quia, quidem ratione fugit
+                    incidunt.
+                </p>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                    Inventore, fugiat. Ut quam culpa dolore harum. Mollitia,
+                    praesentium rerum! Eligendi, necessitatibus!
+                </p>
+                <h2>Lorem, ipsum dolor.</h2>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Rerum, qui!
+                </p>
+                <h3>Lorem ipsum dolor sit amet.</h3>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Temporibus deleniti nam necessitatibus omnis neque?
+                    Doloribus illo praesentium qui non? Pariatur quisquam esse
+                    iste unde optio molestiae assumenda placeat cupiditate
+                    voluptate!
+                </p>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Dolorum quo minus facere.
+                </p>
+                <h3>Lorem ipsum dolor sit.</h3>
+                <p>
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                    Impedit vel vero itaque tempore praesentium, delectus
+                    incidunt maxime placeat illum consequuntur minima labore!
+                    Quae atque reprehenderit ratione quis cupiditate quas fugit!
+                </p>
+            </article>
         </main>
-        <template id="modal">
+
+        <!-- Modal 1 -->
+        <template id="modal-1">
             <h1>Lorem ipsum dolor sit amet.</h1>
             <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam
+                quibusdam eos cumque velit adipisci omnis facilis similique
+                minus animi, impedit optio aperiam aliquam neque. Quasi porro
+                accusamus suscipit. Eum, minus?
+            </p>
+            <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Deleniti voluptatum nam error reiciendis? Nihil, inventore!
+                Adipisci nihil optio magnam obcaecati dolore. Omnis ratione
+                velit veritatis aliquam ullam.
             </p>
             <p>
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                Aliquam cupiditate molestiae enim corrupti ipsa iste sequi quia
-                consequatur magnam perferendis!
+                <img
+                    src="https://images.unsplash.com/photo-1471899236350-e3016bf1e69e?q=80&w=1171&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                    width="100%"
+                    alt=""
+                />
             </p>
             <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus,
-                ratione.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio
+                eos nulla officia minima similique consectetur culpa! Totam
+                sapiente fugit obcaecati atque! Fugit eaque hic voluptatem at.
+                Maxime cumque quam, quis mollitia aut esse ipsa, ea consectetur
+                sunt est, repellendus ducimus.
             </p>
             <p>
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Porro
-                fugit quia tempore rerum voluptate. Quasi, corrupti
-                voluptatibus? Laboriosam, quia. Non, sit unde!
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Blanditiis perferendis pariatur, provident voluptates, amet
+                distinctio labore, asperiores laudantium corporis incidunt
+                impedit quasi libero?
             </p>
         </template>
 
-        <script src="./main.js"></script>
+        <!-- Modal 2 -->
+        <template id="modal-2">
+            <h1>Login</h1>
+            <form action="" id="login-form">
+                <input
+                    type="email"
+                    placeholder="Enter your email..."
+                    id="email"
+                />
+                <br />
+                <input
+                    type="password"
+                    placeholder="Enter your password..."
+                    id="password"
+                />
+                <br />
+                <button type="submit">Login</button>
+            </form>
+        </template>
+
+        <script src="main.js"></script>
     </body>
 </html>
