Sửa lỗi khi nhấn ESC và xử lý mở nhiều Modal

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <header>
             <button id="open-modal-1" class="btn">Open Modal 1</button>
             <button id="open-modal-2" class="btn">Open Modal 2</button>
+            <button id="open-modal-3" class="btn">Open Modal 3</button>
         </header>
         <main>
             <article>
